[tool.poetry]
authors = ["SaitoTsutomu <tsutomu7@hotmail.co.jp>"]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
description = "Web application of 'submitting papers' in ORSJ."
homepage = "https://github.com/SaitoTsutomu/orsj-submit"
license = "Apache-2.0"
name = "orsj-submit"
readme = "README.md"
version = "0.2.0"

[tool.poetry.scripts]
orsj-submit = "orsj_submit:main"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.2.0"
pytest = "^7.3.1"
flask = "^2.3.2"
gunicorn = "^20.1.0"
pdfformfiller = "^0.4"
pyjade = "^4.0.0"
pypdf2 = "^3.0.1"
pyyaml = "^6.0"
redis = "^4.5.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
