[tool.poetry]
authors = ["SaitoTsutomu <tsutomu7@hotmail.co.jp>"]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
description = "Web application of 'submitting papers' in ORSJ."
homepage = "https://github.com/SaitoTsutomu/orsj-submit"
license = "Apache-2.0"
name = "orsj-submit"
readme = "README.md"
version = "0.2.1"

[tool.poetry.scripts]
orsj-submit = "orsj_submit:main"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.12"
flake8 = "^7.0"
flask = "^3.0"
gunicorn = "^21.2"
isort = "^5.13"
mypy = "^1.8"
pdfformfiller = "^0.4"
pyjade = "^4.0"
pypdf2 = "^3.0"
pytest = "^7.4"
pyyaml = "^6.0"
redis = "^5.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
