[tool.poetry]
authors = ["SaitoTsutomu <tsutomu7@hotmail.co.jp>"]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
description = "Web application of 'submitting papers' in ORSJ."
homepage = "https://github.com/SaitoTsutomu/orsj-submit"
license = "Apache-2.0"
name = "orsj-submit"
readme = "README.md"
version = "0.2.1"

[tool.poetry.scripts]
orsj-submit = "orsj_submit:main"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
flask = "^3.0"
gunicorn = "^23.0"
mypy = "^1.11"
pdfformfiller = "^0"
pyjade = "^4.0"
pypdf2 = "^3.0"
pytest = "^8.3"
pyyaml = "^6.0"
redis = "^5.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
